# Medical-Bill-Extraction

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  SECURITY.md  _audit_all.json  docker-compose.yml  package.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1771a9c2e01_app_role.py  a6f2c9d8e3b1_auth_app_role.py  b2c4e6a80f11_auth_tables.py  b7d1e2f3a4c5_dedup_and_summary_indexes.py  c3d5f7b91a22_jobs_owner_rls.py  d4f7a1b2c3e5_claim_function.py  e5a8b3c1d2f6_recover_stalled.py  f6b9c2d3e4a7_job_query_indexes.py
backend/app/ai/: config.py  deterministic_extractor.py  metrics.py  orchestrator.py  page_kinds.py  pdf_loader.py  pdf_vision_extractor.py  pricing.py  retry.py  tools.py
backend/app/ai/agents/: factory.py
backend/app/ai/agents/extraction/: executor.py
backend/app/ai/prompts/templates/extraction/: pdf_file_system.j2  pdf_file_user.j2  system.j2  user.j2
backend/app/api/: main.py  middleware.py
backend/app/api/dependencies/: auth.py  rate_limit.py
backend/app/api/routes/: health.py  jobs.py
backend/app/api/schema/: job.py
backend/app/config/: settings.py
backend/app/core/: context_manager.py  identity.py  storage.py
backend/app/core/common/: logger.py  net.py  rate_limit.py
backend/app/dao/models/: job.py
backend/app/dao/pg/: auth_dao.py  job_dao.py
backend/app/models/: extraction.py
backend/app/service/: exceptions.py  extraction_service.py  job_service.py
backend/app/worker/: loop.py  retention.py
backend/scripts/: evaluate_extraction.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_jobs_api.py  test_reliability.py  test_rls_isolation.py  test_worker_queue.py
backend/tests/unit/: test_concurrency.py  test_deterministic_extractor.py  test_evaluate_extraction.py  test_extraction_service.py  test_job_response.py  test_job_service.py  test_metrics.py  test_model_policy.py  test_net.py  test_page_kinds.py  test_pdf_loader.py  test_pdf_vision_extractor.py  test_pricing.py  test_rate_limit.py  test_rate_limit_core.py  test_retention.py  test_retry.py  test_session_token.py  test_storage.py  test_tools.py  test_user_rate_limit.py  test_worker_loop.py
docs/: design.md  domain.md  schema.md
frontend/: .dockerignore  (+6 more)
(+44 files in other folders)
